kubernetes/applications/site/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: site
  labels:
    app.kubernetes.io/name: veridex-site
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: veridex-site
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
